Added weather info html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,34 @@
     <div class="container">
       <div class="main">
         <h1>Check Out the Weather</h1>
+
+        <h2>Singapore</h2>
+        <h4>
+          Monday 3 Jan 2022 <br />
+          09:03 am
+        </h4>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <ul>
+                <li><h3>26 °C | °F</h3></li>
+                <li><h3>Cloudy</h3></li>
+              </ul>
+            </div>
+            <div class="col">
+              <img
+                src="https://openweathermap.org/img/wn/03d@2x.png"
+                alt="clouds"
+              />
+            </div>
+            <div class="col">
+              <ul>
+                <li>Humidity: 80 %</li>
+                <li>Wind speed: 5 km/h</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
