--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
           </div>
         </div>
       </div>
+      <small
+        ><a href="https://github.com/chualy/weather-app" target="blank"
+          >Open-source code</a
+        >
+        by Yen</small
+      >
     </div>
 
     <script src="src/app.js"></script>
