Updated HTML and CSS for weather information and source code link.

--- a/index.html
+++ b/index.html
@@ -36,32 +36,40 @@
           <div class="row">
             <div class="col">
               <ul>
-                <li><h3>26 °C | °F</h3></li>
+                <li>
+                  <h4>
+                    <strong>26</strong>
+                    <span class="temp-unit">°C | <a href="#">°F</a></span>
+                  </h4>
+                </li>
                 <li><h3>Cloudy</h3></li>
               </ul>
             </div>
             <div class="col">
               <img
-                src="https://openweathermap.org/img/wn/03d@2x.png"
+                src="https://openweathermap.org/img/wn/04d@2x.png"
                 alt="clouds"
                 class="main-icon"
               />
             </div>
             <div class="col">
-              <ul>
-                <li>Humidity: 80 %</li>
-                <li>Wind speed: 5 km/h</li>
+              <ul class="weather-parameter">
+                <li><h5>Humidity: 80 %</h5></li>
+                <li><h5>Wind speed: 5 km/h</h5></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-      <small
-        ><a href="https://github.com/chualy/weather-app" target="blank"
+      <p>
+        <a
+          href="https://github.com/chualy/weather-app"
+          target="blank"
+          class="code-link"
           >Open-source code</a
         >
-        by Yen</small
-      >
+        by Yen
+      </p>
     </div>
 
     <script src="src/app.js"></script>
