1. Updated CSS of main weather app. 2. Added JS with API URL.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Gentium+Basic:ital,wght@0,400;0,700;1,400;1,700&family=Neuton:ital,wght@0,200;0,300;0,400;1,400&family=Ultra&display=swap"
       rel="stylesheet"
     />
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Vanilla Weather App</title>
   </head>
@@ -38,7 +38,7 @@
               <ul>
                 <li>
                   <h4>
-                    <strong>26</strong>
+                    <strong id="temp-number">26</strong>
                     <span class="temp-unit">°C | <a href="#">°F</a></span>
                   </h4>
                 </li>
