Update HTML and JS to add time function.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
         <h1>Check Out the Weather</h1>
 
         <h2 id="city">Singapore</h2>
-        <h4>
-          Monday 3 Jan 2022 <br />
-          09:03 am
-        </h4>
+        <h4>Last updated: <span id="day-time">Monday 5:00</span></h4>
         <div class="container">
           <div class="row">
             <div class="col">
