Update HTML and CSS to retrieve weather icon.

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
             </div>
             <div class="col">
               <img
-                src="https://openweathermap.org/img/wn/04d@2x.png"
+                src="https://openweathermap.org/img/wn/02d@2x.png"
                 alt="clouds"
                 class="main-icon"
+                id="icon"
               />
             </div>
             <div class="col">
