1. Updated Search button CSS. 2. Updated HTML and JS to add temperature unit conversion.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                 <li>
                   <h4>
                     <strong id="temp-number">26</strong>
-                    <span class="temp-unit">°C | <a href="#">°F</a></span>
+                    <span class="temp-unit"
+                      ><a href="#" id="celsius-link">°C</a> |
+                      <a href="#" id="fahrenheit-link">°F</a></span
+                    >
                   </h4>
                 </li>
                 <li><h3 id="description">Cloudy</h3></li>
