1. Added 'active' class for unit conversion. 2. Removed 'console.log'.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <h4>
                     <strong id="temp-number">26</strong>
                     <span class="temp-unit"
-                      ><a href="#" id="celsius-link">°C</a> |
+                      ><a href="#" id="celsius-link" class="active">°C</a> |
                       <a href="#" id="fahrenheit-link">°F</a></span
                     >
                   </h4>
