1. Updated search function to handle default on loading. 2. Updated footer HTML.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           >Open-source code</a
         >
         by Yen. Hosted on
-        <a href="https://netlify.com" target="blank" class="link">Netlify.</a>
+        <a href="https://netlify.com" target="blank" class="link">Netlify</a>.
       </p>
     </div>
 
