1. Added icon for weather parameters. 2. Updated main division CSS (background colour, font sizes). 3. Added weather forecast HTML/CSS (with dummy data).

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li><h3 id="description">Cloudy</h3></li>
               </ul>
             </div>
-            <div class="col">
+            <div class="col main-icon-div">
               <img
                 src="https://openweathermap.org/img/wn/02d@2x.png"
                 alt="clouds"
@@ -79,12 +79,52 @@
             <div class="col">
               <ul class="weather-parameter">
                 <li>
-                  <h5>Humidity: <span id="humidity">80</span> %</h5>
+                  <h5>
+                    <img src="src/image/humidity.png" width="30px" />
+                    Humidity:
+                    <span id="humidity">80</span> %
+                  </h5>
                 </li>
                 <li>
-                  <h5>Wind speed: <span id="wind">5</span> km/h</h5>
+                  <h5>
+                    <img src="src/image/windspeed.png" width="30px" />
+                    Wind speed:
+                    <span id="wind">5</span> km/h
+                  </h5>
                 </li>
               </ul>
+            </div>
+          </div>
+        </div>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col=2">
+              <div class="forecast-indiv">
+                <h5 class="forecast-day">Mon</h5>
+                <img
+                  src="https://openweathermap.org/img/wn/02d@2x.png"
+                  alt="clouds"
+                  width="70%"
+                />
+                <h5 class="forecast-temp">
+                  <span class="forecast-temp-max">30°</span> <br />
+                  <span class="forecast-temp-min">22°</span>
+                </h5>
+              </div>
+            </div>
+            <div class="col=2">
+              <div class="forecast-indiv">
+                <h5 class="forecast-day">Mon</h5>
+                <img
+                  src="https://openweathermap.org/img/wn/02d@2x.png"
+                  alt="clouds"
+                  width="70%"
+                />
+                <h5 class="forecast-temp">
+                  <span class="forecast-temp-max">30°</span> <br />
+                  <span class="forecast-temp-min">22°</span>
+                </h5>
+              </div>
             </div>
           </div>
         </div>
