Updated CSS for static text.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         </form>
 
         <h2 id="city">Singapore</h2>
-        <h4>Last updated: <span id="day-time">Monday 5:00</span></h4>
+        <h4>
+          <span class="static-text">Last updated: </span
+          ><span id="day-time">Monday 5:00</span>
+        </h4>
         <div class="container">
           <div class="row">
             <div class="col">
@@ -81,14 +84,14 @@
                 <li>
                   <h5>
                     <img src="src/image/humidity.png" width="30px" />
-                    Humidity:
+                    <span class="static-text">Humidity:</span>
                     <span id="humidity">80</span> %
                   </h5>
                 </li>
                 <li>
                   <h5>
                     <img src="src/image/windspeed.png" width="30px" />
-                    Wind speed:
+                    <span class="static-text">Wind speed:</span>
                     <span id="wind">5</span> km/h
                   </h5>
                 </li>
