--- a/index.html
+++ b/index.html
@@ -99,38 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col=2">
-              <div class="forecast-indiv">
-                <h5 class="forecast-day">Mon</h5>
-                <img
-                  src="https://openweathermap.org/img/wn/02d@2x.png"
-                  alt="clouds"
-                  width="70%"
-                />
-                <h5 class="forecast-temp">
-                  <span class="forecast-temp-max">30°</span> <br />
-                  <span class="forecast-temp-min">22°</span>
-                </h5>
-              </div>
-            </div>
-            <div class="col=2">
-              <div class="forecast-indiv">
-                <h5 class="forecast-day">Mon</h5>
-                <img
-                  src="https://openweathermap.org/img/wn/02d@2x.png"
-                  alt="clouds"
-                  width="70%"
-                />
-                <h5 class="forecast-temp">
-                  <span class="forecast-temp-max">30°</span> <br />
-                  <span class="forecast-temp-min">22°</span>
-                </h5>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </div>
       <p>
         <a
