--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           ><span id="day-time">Monday 5:00</span>
         </h4>
         <div class="container">
-          <div class="row">
+          <div class="row d-flex justify-content-center">
             <div class="col">
               <ul>
                 <li>
@@ -71,7 +71,7 @@
                 <li><h3 id="description">Cloudy</h3></li>
               </ul>
             </div>
-            <div class="col main-icon-div">
+            <div class="col main-icon-div d-flex justify-content-center">
               <img
                 src="https://openweathermap.org/img/wn/02d@2x.png"
                 alt="clouds"
@@ -99,7 +99,10 @@
             </div>
           </div>
         </div>
-        <div class="weather-forecast" id="forecast"></div>
+        <div
+          class="weather-forecast d-flex justify-content-center"
+          id="forecast"
+        ></div>
       </div>
       <p>
         <a
