Updated Search results function to include 'Feels like' temperature data.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,15 @@
                   </h3>
                 </li>
                 <li>
-                  <h5><span class="static-text">Feels like:</span></h5>
+                  <h5>
+                    <img src="src/image/realfeel.png" width="50px" /><span
+                      class="static-text"
+                      >Feels like:</span
+                    >
+                    <span class="feelslike-temp" id="feelslike-temp-number"
+                      >28</span
+                    >°
+                  </h5>
                 </li>
               </ul>
             </div>
