1. Updated JS and CSS to customise weather icons. 2. Updated static text colour.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <ul>
                 <li>
                   <img
-                    src="https://openweathermap.org/img/wn/02d@2x.png"
+                    src="src/image/weather-icon-custom/02d.png"
                     alt="clouds"
                     class="main-icon"
                     id="icon"
