Updated Footer to add Netlify hosting address, attribute to Flaticon, and updated styling.

--- a/index.html
+++ b/index.html
@@ -124,10 +124,22 @@
           href="https://github.com/chualy/weather-app"
           target="blank"
           class="link"
-          >Open-source code</a
+        >
+          Open-source code</a
         >
         by Yen. Hosted on
-        <a href="https://netlify.com" target="blank" class="link">Netlify</a>.
+        <a
+          href="https://graceful-cheesecake-48597f.netlify.app/"
+          target="blank"
+          class="link"
+          >Netlify</a
+        >. Weather icons created by
+        <a
+          href="https://www.flaticon.com/authors/pixel-perfect"
+          target="blank"
+          class="link"
+          >Pixel perfect - Flaticon</a
+        >.
       </p>
     </div>
 
