--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <form>
           <div class="row">
-            <div class="col-8">
+            <div class="col-md-8">
               <div class="form-group">
                 <input
                   type="search"
@@ -46,15 +46,16 @@
                 />
               </div>
             </div>
-            <div class="col-2">
-              <button type="submit" class="btn btn-primary search-button">
+            <div class="col-md-4 d-flex justify-content-center">
+              <button
+                type="submit"
+                class="btn btn-primary buttons search-button"
+              >
                 <i class="fa-solid fa-magnifying-glass search-icon"></i>Search
               </button>
-            </div>
-            <div class="col-2">
               <button
                 type="button"
-                class="btn btn-primary search-button"
+                class="btn btn-primary buttons location-button"
                 id="current-location"
               >
                 <i class="fa-solid fa-location-dot location-icon"></i>
