--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2 id="city">Singapore</h2>
         <h4>
           <span class="static-text">Last updated:<br /> </span
-          ><span id="day-time">Monday 5:00</span>
+          ><span id="day-time"></span>
         </h4>
         <div class="container">
           <div class="row d-flex justify-content-center">
