1. Removed Unit Conversion functions and classes. 2. Added Celsius Unit image.

--- a/index.html
+++ b/index.html
@@ -71,26 +71,23 @@
         </h4>
         <div class="container">
           <div class="row d-flex justify-content-center">
-            <div class="col">
+            <div class="col d-flex justify-content-center">
               <ul>
                 <li>
                   <h3>
                     <strong id="temp-number">26</strong>
+
                     <span class="temp-unit"
-                      ><a href="#" id="celsius-link" class="active">°C</a> |
-                      <a href="#" id="fahrenheit-link">°F</a></span
-                    >
+                      ><img src="src/image/nowtemp2.png" width="60px"
+                    /></span>
                   </h3>
                 </li>
                 <li>
                   <h5>
-                    <img src="src/image/realfeel.png" width="50px" /><span
-                      class="static-text"
-                      >Feels like:</span
+                    <span class="static-text">Feels like:</span>
+                    <span class="feelslike-temp"
+                      ><span id="feelslike-temp-number">28</span> °</span
                     >
-                    <span class="feelslike-temp" id="feelslike-temp-number"
-                      >28</span
-                    >°
                   </h5>
                 </li>
               </ul>
